XCOMMONS-3249: Allow storing job status and logs in a shared location
* WIP draft to better support having several hibernate sessions with a singleton database connection pool.